--- a/index.html
+++ b/index.html
@@ -1,37 +1,7 @@
+  
 <!DOCTYPE html>
-<html>
-<link rel="stylesheet" href="style.css">
-
-<body>
-
-    <div class="cont">
-       <br>
-       <br>
-        <div class="smenu">Home</div>
-        <br>
-        <br>
-        <div class="smenu">Machines</div>
-        <br>
-        <br>
-        <div class="smenu">Applications</div>
-        <br>
-        <br>
-        <div class="smenu">Contact</div>
-        <br>
-        <br>
-        <div class="smenu">About Us</div>
-        
-    </div>
-
-
-
-
-
-
-
-
-
-
-</body>
-
-</html>
+<h1>Hi there</h1>
+<br>
+<h2>Website is under construction 
+   see you soon!!
+</h2>
