--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<meta http-equiv="refresh" content="0; URL=https://example.com/">
+<link rel="canonical" href="https://example.com/">
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
