--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<title>Redirecting to https://example.com/</title>
 <meta http-equiv="refresh" content="0; URL=https://example.com/">
 <link rel="canonical" href="https://example.com/">
 <html lang="en-US">
