--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<title>Redirecting to https://example.com/</title>
-<meta http-equiv="refresh" content="0; URL=https://example.com/">
-<link rel="canonical" href="https://example.com/">
+<meta http-equiv="refresh" content="0; URL=https://www.plusoneautomations.in/">
+<link rel="canonical" href="https://www.plusoneautomations.in/">
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
