--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -160,7 +160,7 @@ flexibility(document.documentElement);
        }</style>
 
 
-    <form id="gform" method="POST" class="pure-form pure-form-stacked" data-email="from_email@example.com" action="https://script.google.com/macros/s/AKfycbxJxqbLAMn-MYk3CctL4spkAo0ic5EM0WHlbzXbAQ/exec">
+    <form id="gform" method="POST" class="pure-form pure-form-stacked" data-email="from_email@example.com" <!-- action="https://script.google.com/macros/s/AKfycbxJxqbLAMn-MYk3CctL4spkAo0ic5EM0WHlbzXbAQ/exec" --> >
 
 
 
